test/src/e2e_vm_tests/test_programs/should_pass/language/trivial_bool_and_enum/stdout.snap
---
source: test/src/snapshot/mod.rs
---
> forc build --path test/src/e2e_vm_tests/test_programs/should_pass/language/trivial_bool_and_enum
exit status: 1
output:
    Building test/src/e2e_vm_tests/test_programs/should_pass/language/trivial_bool_and_enum
   Compiling library std (test/src/e2e_vm_tests/reduced_std_libs/sway-lib-std-assert)
   Compiling script trivial_bool_and_enum (test/src/e2e_vm_tests/test_programs/should_pass/language/trivial_bool_and_enum)
warning
  --> test/src/e2e_vm_tests/test_programs/should_pass/language/trivial_bool_and_enum/src/main.sw:8:4
   |
 6 | }
 7 | 
 8 | fn encode_decode(s: SomeEnum) -> SomeEnum {
   |    ------------- This function is never called.
 9 |     let bytes = encode(s);
10 |     abi_decode::<TrivialEnum<SomeEnum>>(bytes).unwrap()
   |
____

warning
  --> test/src/e2e_vm_tests/test_programs/should_pass/language/trivial_bool_and_enum/src/main.sw:21:9
   |
19 |     let bytes = encode(SomeEnum::A(1));
20 |     let s = abi_decode::<MyStruct>(bytes);
21 |     let e = s.a.unwrap();
   |         - This declaration is never used.
22 | }
23 | 
   |
____

error: Type is not trivially decodable
  --> test/src/e2e_vm_tests/test_programs/should_pass/language/trivial_bool_and_enum/src/main.sw:14:8
   |
...
14 | struct MyStruct {
   |        ^^^^^^^^ `MyStruct` is not trivially decodable.
   |        -------- help: Consider the suggestions below to make this struct trivially decodable.
   |
____

  Aborting due to 1 error.
error: Failed to compile trivial_bool_and_enum

> forc test --path test/src/e2e_vm_tests/test_programs/should_pass/language/trivial_bool_and_enum --logs
exit status: 1
output:
    Building test/src/e2e_vm_tests/test_programs/should_pass/language/trivial_bool_and_enum
   Compiling library std (test/src/e2e_vm_tests/reduced_std_libs/sway-lib-std-assert)
   Compiling script trivial_bool_and_enum (test/src/e2e_vm_tests/test_programs/should_pass/language/trivial_bool_and_enum)
warning
  --> test/src/e2e_vm_tests/test_programs/should_pass/language/trivial_bool_and_enum/src/main.sw:21:9
   |
19 |     let bytes = encode(SomeEnum::A(1));
20 |     let s = abi_decode::<MyStruct>(bytes);
21 |     let e = s.a.unwrap();
   |         - This declaration is never used.
22 | }
23 | 
   |
____

error: Type is not trivially decodable
  --> test/src/e2e_vm_tests/test_programs/should_pass/language/trivial_bool_and_enum/src/main.sw:14:8
   |
...
14 | struct MyStruct {
   |        ^^^^^^^^ `MyStruct` is not trivially decodable.
   |        -------- help: Consider the suggestions below to make this struct trivially decodable.
   |
____

  Aborting due to 1 error.
error: Failed to compile trivial_bool_and_enum
